# 3d-renderer-cpu

./: .gitignore  CMakeLists.txt  LuaApi.md  README.md  SceneFile.md
assets/: box.txt  earth.txt  scene.txt
src/: .clang-format  baseMaterial.h  camera-render.cpp  camera.cpp  camera.h  color.h  data.cpp  data.h  earthMaterial.h  environmentMap.cpp  environmentMap.h  fog.cpp  fog.h  generateMesh-icosphere.cpp  generateMesh-plane.cpp  generateMesh-sphere.cpp  generateMesh-stl.cpp  generateMesh.cpp  generateMesh.h  gui.cpp  gui.h  light.cpp  light.h  loadObj.h  lua.cpp  lua.h  main.cpp  main.h  material.cpp  material.h  matrix.cpp  matrix.h  miscTypes.h  multithreading.cpp  multithreading.h  object.cpp  object.h  pbrMaterial.cpp  pbrMaterial.h  phongMaterial.cpp  (+17 more)
src/lua/: lua-camera.cpp  lua-imgui.cpp  lua-lights.cpp  lua-material.cpp  lua-mesh.cpp  lua-object.cpp  lua-scene.cpp  lua-simples.cpp  lua-state.h  lua-textures.cpp  lua-window.cpp  lua.cpp  lua.h
src/lua/sol/: sol_ImGui.h
src/sol/: sol.hpp
